# LabMate

./: .gitignore  LabMate.cabal  LabRat.cabal  README.md  TODO.md  cabal.project  if.m  test.m
emacs/: labmate.el  labrat.el
examples/: assign.m  assign2.m  assign3.m  assign4.m  badnestedseven.m  constraint-swapped.m  constraint.m  decl.m  dimensions.m  dims.m  function.m  hello.m  imeko-bad.m  imeko-dims.m  imeko.m  lambda.m  matrixadd-factor.m  matrixadd.m  matrixmul.m  matrixmul1.m  matrixmul2.m  matrixnorm.m  matrixnorm2.m  matrixnorm3.m  matrixnorm4.m  matrixq-bad.m  matrixq.m  matrixq2.m  matrixq3.m  mldir.m  nestedfun.m  nestedif.m  nestedrename.m  nestedrename3.m  proj.m  quantities.m  rename.m  rescal.m  rescalQ.m  seven.m  (+6 more)
examples/input/: heterogenous.m  minimal.m  nesting.m
examples/rename/: assign.m  assign2.m  capturing.m  declare.m  nested2-good.m  simple.m  toomany.m
src/: BRect.hs  Bwd.hs  CoreTT.hs  Hide.hs  Lex.hs  Lisp.hs  Machine.hs  MagicStrings.hs  Main.hs  MissingLibrary.hs  NormalForm.hs  Parse.hs  Syntax.hs  Term.hs
src/Machine/: Reassemble.hs
src/Parse/: InputFormat.hs  Matlab.hs
src/Term/: Indexed.hs  Natty.hs  Thinning.hs  Vec.hs
test/: Main.hs
test/Test/: CoreTT.hs  Golden.hs  Main.hs  RunCoreTT.hs  RunExamples.hs
test/golden/: assign.gold  badnestedseven.gold  capturing.gold  complex.gold  decl.gold  for.gold  function.gold  goodnestedseven.gold  hello.gold  heterogenous.gold  if.gold  lambda.gold  minimal.gold  nested-captured.gold  nested1-good.gold  nested2-good.gold  nestedfun.gold  nestedif.gold  nesting.gold  proj.gold  readFromFile.gold  seven.gold  simple.gold  switch.gold  test.gold  toomany.gold  typecheck.gold
writing/: abstract.tex
writing/AMCTM2023/: abstract.tex  labrat.bib  presentation.tex  ws-procs9x6.bst
writing/AMCTM2023/demo/: minimal.m  nested.m  readFromFile.m  simple.m  toomany.m
writing/IMEKOWC2024/LabMate/: IMEKO2024.cls  abstract.txt  labmate.bib  paper.docx  paper.tex  ws-crop9x6.sty  ws-procs9x6.cls
writing/IMEKOWC2024/presentation/: presentation.tex
writing/NPLSep2024/: ConorDraft.md
writing/NPLSep2024/examples-live/: demo_3_0_hello_labmate.m  demo_4_0_renaming_simple.m  demo_5_0_zen_error.m  demo_5_1_cubit.m  demo_5_2_dim_add.m
writing/NPLSep2024/examples-start/: 4-0-renaming-simple.m  4-1-nested-captured.m  cubit.m  demo_5_0_zen_error.m  demo_5_2_dim_add.m  demo_5_3_dim_mult.m  demo_5_5_hello_dimensions.m  dim-add.m
writing/NPLSep2024/slides/: labmate.tex
