cabal-version:      2.4
name:               LabMate
version:            0.1.3.0

-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Conor McBride, Georgi Nakov, Fredrik Nordvall Forsberg
maintainer:         fredrik.nordvall-forsberg@strath.ac.uk

common haskell
  default-extensions:  DataKinds,
                       DeriveTraversable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       PolyKinds,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances,
                       TypeOperators
                       LambdaCase,
                       PatternSynonyms,
                       PatternGuards
  build-depends:       base <5,
                       containers,
                       text,
                       mtl,
                       newtype,
                       terminal-size,
                       directory,
                       filepath,
                       mgen
  ghc-options:         -Wno-noncanonical-monad-instances
                       -Wno-noncanonical-monoid-instances

executable labmate
    import:           haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BRect,
                      Bwd,
                      Hide,
                      Lex,
                      Lisp,
                      Parse,
                      Parse.Matlab,
                      Syntax,
                      Machine,
                      Machine.Reassemble,
                      Term,
                      Term.Indexed,
                      Term.Natty,
                      Term.Thinning,
                      Term.Vec,
                      CoreTT
                      Paths_LabMate
    autogen-modules:  Paths_LabMate

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010
