cabal-version:      2.4
name:               LabMate
version:            0.2.0.4

-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Conor McBride, Georgi Nakov, Fredrik Nordvall Forsberg
maintainer:         fredrik.nordvall-forsberg@strath.ac.uk

common haskell
  default-extensions:  DataKinds,
                       DeriveTraversable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       PolyKinds,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances,
                       TypeOperators,
                       LambdaCase,
                       PatternSynonyms,
                       PatternGuards
  build-depends:       base <5,
                       containers,
                       text,
                       mtl,
                       newtype,
                       terminal-size,
                       directory,
                       filepath,
                       optparse-applicative,
                       mgen > 0.1.0.1
  ghc-options:         -Wno-noncanonical-monad-instances
                       -Wno-noncanonical-monoid-instances

library
    import:           haskell
    exposed-modules:  BRect,
                      Bwd,
                      Hide,
                      Lex,
                      Lisp,
                      Parse,
                      Parse.Matlab,
                      Syntax,
                      Machine,
                      Machine.Reassemble,
                      MagicStrings,
                      Term,
                      Term.Indexed,
                      Term.Natty,
                      Term.Thinning,
                      Term.Vec,
                      CoreTT,
                      NormalForm,
                      MissingLibrary
    hs-source-dirs:   src
    default-language: Haskell2010

executable labmate
    import:           haskell
    main-is:          src/Main.hs
    build-depends:    LabMate
    other-modules:    Paths_LabMate
    autogen-modules:  Paths_LabMate
    default-language: Haskell2010

test-suite coreTT
  import:              haskell
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             Test/RunCoreTT.hs
  other-modules:       Test.CoreTT
  build-depends:       LabMate
                     , base <5
                     , tasty
                     , tasty-hunit
                     , tasty-autocollect
  build-tool-depends:  tasty-autocollect:tasty-autocollect
                     , LabMate:labmate
  ghc-options:         -F -pgmF=tasty-autocollect
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite examples
  import:              haskell
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             Test/RunExamples.hs
  build-depends:       LabMate
                     , base <5
                     , directory
                     , filepath
                     , tasty
                     , tasty-silver
  build-tool-depends:  LabMate:labmate
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
