cabal-version:      2.4
name:               LabRat
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Conor McBride, Georgi Nakov, Fredrik Nordvall Forsberg
maintainer:         fredrik.nordvall-forsberg@strath.ac.uk

common haskell
  default-extensions:  DataKinds,
                       DeriveTraversable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances,
                       LambdaCase

library
  import:              haskell
  exposed-modules:     Lex
                     , Bwd
                     , Hide
  build-depends:       base <5
                     , containers
                     , text
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files:
--    README.md

executable labrat
    import:           haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lex
                    , Bwd
                    , Hide
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
                    , LabRat
                    , text
                    , containers
                     , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
